Closed Bug 345422 Opened 18 years ago Closed 18 years ago

GOK can't UI Grab nightly firefox

Categories

(Firefox :: Disability Access, defect)

All
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Keywords: access)

Attachments

(1 file)

Firefox doesn't set STATE_SHOWING correctly
Attached patch patchSplinter Review
Attachment #230091 - Flags: review?(aaronleventhal)
Attachment #230091 - Flags: review?(aaronleventhal) → review+
Checking in nsAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsAccessible.cpp,v  <--  nsAccessible.cpp
new revision: 1.202; previous revision: 1.201
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: