Bug 345422 GOK can't UI Grab nightly firefox r=aaronleventhal