accessible/src/base/nsAccessible.cpp
@@ -2116,7 +2116,6 @@ already_AddRefed<nsIDOMNode> nsAccessible::GetInverseRelatedNode(nsIAtom *aRelat
   if (controlID.IsEmpty()) {
     return nsnull;
   }
-  nsIDOMNode *relatedNode = nsnull;
   // Something might be pointing to us
   PRUint32 count = 0;
   nsIContent *start = content;
@@ -2333,7 +2332,7 @@ NS_IMETHODIMP nsAccessible::GetExtState(PRUint32 *aExtState)
     *aExtState = EXT_STATE_DEFUNCT;
     return NS_OK; // Node shut down
   }
-  *aExtState = (State(this) & STATE_INVISIBLE) ? EXT_STATE_SHOWING : 0;
+  *aExtState = (State(this) & STATE_INVISIBLE) ? 0 : EXT_STATE_SHOWING;
 
   // XXX We can remove this hack once we support RDF-based role & state maps
   if (mRoleMapEntry && (mRoleMapEntry->role == ROLE_ENTRY || mRoleMapEntry->role == ROLE_PASSWORD_TEXT)) {
